# sdfglib-einsum

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: unit_tests.yml
cmake/: sdfglibEinsumConfig.cmake.in
include/sdfg/blas/: blas_dispatcher.h  blas_dispatcher_axpy.h  blas_dispatcher_copy.h  blas_dispatcher_dot.h  blas_dispatcher_gemm.h  blas_dispatcher_gemv.h  blas_dispatcher_ger.h  blas_dispatcher_scal.h  blas_dispatcher_symm.h  blas_dispatcher_symv.h  blas_dispatcher_syr.h  blas_dispatcher_syrk.h  blas_node.h  blas_node_axpy.h  blas_node_copy.h  blas_node_dot.h  blas_node_gemm.h  blas_node_gemv.h  blas_node_ger.h  blas_node_scal.h  blas_node_symm.h  blas_node_symv.h  blas_node_syr.h  blas_node_syrk.h
include/sdfg/einsum/: einsum_dispatcher.h  einsum_node.h  einsum_serializer.h
include/sdfg/transformations/: einsum2blas.h  einsum2blas_axpy.h  einsum2blas_copy.h  einsum2blas_dot.h  einsum2blas_gemm.h  einsum2blas_gemv.h  einsum2blas_ger.h  einsum2blas_scal.h  einsum2blas_symm.h  einsum2blas_symv.h  einsum2blas_syr.h  einsum2blas_syrk.h  einsum_expand.h  einsum_lift.h  einsum_lift_computation.h
src/blas/: blas_dispatcher.cpp  blas_dispatcher_axpy.cpp  blas_dispatcher_copy.cpp  blas_dispatcher_dot.cpp  blas_dispatcher_gemm.cpp  blas_dispatcher_gemv.cpp  blas_dispatcher_ger.cpp  blas_dispatcher_scal.cpp  blas_dispatcher_symm.cpp  blas_dispatcher_symv.cpp  blas_dispatcher_syr.cpp  blas_dispatcher_syrk.cpp  blas_node.cpp  blas_node_axpy.cpp  blas_node_copy.cpp  blas_node_dot.cpp  blas_node_gemm.cpp  blas_node_gemv.cpp  blas_node_ger.cpp  blas_node_scal.cpp  blas_node_symm.cpp  blas_node_symv.cpp  blas_node_syr.cpp  blas_node_syrk.cpp
src/einsum/: einsum_dispatcher.cpp  einsum_node.cpp  einsum_serializer.cpp
src/transformations/: einsum2blas.cpp  einsum2blas_axpy.cpp  einsum2blas_copy.cpp  einsum2blas_dot.cpp  einsum2blas_gemm.cpp  einsum2blas_gemv.cpp  einsum2blas_ger.cpp  einsum2blas_scal.cpp  einsum2blas_symm.cpp  einsum2blas_symv.cpp  einsum2blas_syr.cpp  einsum2blas_syrk.cpp  einsum_expand.cpp  einsum_lift.cpp  einsum_lift_computation.cpp
tests/: CMakeLists.txt  helper.h  test.cpp
tests/blas/: blas_dispatcher_axpy_test.cpp  blas_dispatcher_copy_test.cpp  blas_dispatcher_dot_test.cpp  blas_dispatcher_gemm_test.cpp  blas_dispatcher_gemv_test.cpp  blas_dispatcher_ger_test.cpp  blas_dispatcher_scal_test.cpp  blas_dispatcher_symm_test.cpp  blas_dispatcher_symv_test.cpp  blas_dispatcher_syr_test.cpp  blas_dispatcher_syrk_test.cpp  blas_dispatcher_test.cpp  blas_node_axpy_test.cpp  blas_node_copy_test.cpp  blas_node_dot_test.cpp  blas_node_gemm_test.cpp  blas_node_gemv_test.cpp  blas_node_ger_test.cpp  blas_node_scal_test.cpp  blas_node_symm_test.cpp  blas_node_symv_test.cpp  blas_node_syr_test.cpp  blas_node_syrk_test.cpp
tests/einsum/: einsum_dispatcher_test.cpp  einsum_node_test.cpp
tests/fixtures/: einsum.h
tests/transformations/: einsum2blas_axpy_test.cpp  einsum2blas_copy_test.cpp  einsum2blas_dot_test.cpp  einsum2blas_gemm_test.cpp  einsum2blas_gemv_test.cpp  einsum2blas_ger_test.cpp  einsum2blas_scal_test.cpp  einsum2blas_symm_test.cpp  einsum2blas_symv_test.cpp  einsum2blas_syr_test.cpp  einsum2blas_syrk_test.cpp  einsum2blas_test.cpp  einsum_expand_fail_test.cpp  einsum_expand_test.cpp  einsum_lift_computation_test.cpp  einsum_lift_fail_test.cpp  einsum_lift_test.cpp
